Testene fungere med java 11 i mvn test