@@ -24,7 +24,7 @@
         <commons.lang.version>3.11</commons.lang.version>
         <commons.configuration.version>2.7</commons.configuration.version>
         <commons.beanutils.version>1.9.4</commons.beanutils.version>
-<!--     assertj.version version   -->
+        <!--     assertj.version version   -->
         <assertj.version>3.8.0</assertj.version>
         <gson.version>2.8.6</gson.version>
         <prometheus.version>0.6.0</prometheus.version>
@@ -51,13 +51,6 @@
         <scala.parser.combinators.version>1.1.2</scala.parser.combinators.version>
         <javax.servlet.version>4.0.1</javax.servlet.version>
 
-
-        <!--
-        <netty.version>4.1.56.Final</netty.version>
-        <netty.version>4.1.31.Final</netty.version>
-        <netty.version>4.0.51.Final</netty.version>
-        <netty.version>4.1.0.Final</netty.version>
-        -->
         <netty.version>4.1.56.Final</netty.version>
 
 
@@ -78,33 +71,24 @@
         <httpmime.version>4.5.13</httpmime.version>
 
         <!--Build settings -->
-        <maven.surefire.version>2.19.1</maven.surefire.version>
-        <maven.failsafe.version>2.22.2</maven.failsafe.version>
+        <maven.surefire.version>3.0.0-M1</maven.surefire.version>
+        <maven.failsafe.version>3.0.0-M1</maven.failsafe.version>
         <scala.maven.version>4.4.0</scala.maven.version>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <!--Test -->
         <junit.version>5.7.0</junit.version>
-        <junit.platform.version>1.1.1</junit.platform.version>
+        <junit.platform.version>1.3.2</junit.platform.version>
         <pitest-junit5-plugin.version>0.12</pitest-junit5-plugin.version>
         <pitest-maven.version>1.6.2</pitest-maven.version>
         <mockito.version>1.10.19</mockito.version>
-        <!--
-
-                <gatling.version>2.3.1</gatling.version>
-                <gatling-maven-plugin.version>2.2.4</gatling-maven-plugin.version>
-
-                   <gatling.version>3.0.1.1</gatling.version>
-                   <gatling-maven-plugin.version>3.0.1</gatling-maven-plugin.version>
-           -->
-
         <gatling.version>2.3.1</gatling.version>
         <gatling-maven-plugin.version>3.1.1</gatling-maven-plugin.version>
 
-        <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
+        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     </properties>
 
     <packaging>jar</packaging>
@@ -855,8 +839,12 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                     <properties>
-                        <excludeTags>integration-test</excludeTags>
+                        <excludedGroups>integration-test, mutation-tests</excludedGroups>
+                        <excludedTags>integration-test, mutation-tests</excludedTags>
                     </properties>
                 </configuration>
             </plugin>
@@ -915,7 +903,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>1.8</version>
+                                    <version>11</version>
                                 </requireJavaVersion>
                                 <dependencyConvergence/>
                             </rules>
@@ -926,7 +914,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>6.0.4</version>
+                <version>6.0.5</version>
             </plugin>
         </plugins>
     </build>
